// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalInformation should render personal information when error 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Alert
    bsClass="alert"
    bsStyle="danger"
    closeLabel="Close alert"
>
    Hubo un error al consultar su información
</Alert>,
  "nodes": Array [
    <Alert
      bsClass="alert"
      bsStyle="danger"
      closeLabel="Close alert"
>
      Hubo un error al consultar su información
</Alert>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <PersonalInformation
        error={true}
        person={null}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "error": true,
          "person": null,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Alert
          bsClass="alert"
          bsStyle="danger"
          closeLabel="Close alert"
>
          Hubo un error al consultar su información
</Alert>,
        "_debugID": 4,
        "_renderedOutput": <Alert
          bsClass="alert"
          bsStyle="danger"
          closeLabel="Close alert"
>
          Hubo un error al consultar su información
</Alert>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <PersonalInformation
    error={true}
    person={null}
/>,
}
`;

exports[`PersonalInformation should render personal information when person 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    <h3
        className="home-personal-information"
    >
        Tu Información
    </h3>
    <div
        className="row"
    >
        <div
            className="col-lg-2"
        >
            <img
                alt="foto personal"
                src="https://jigsaw.thoughtworks.net/consultants/22118/show_picture?style=profile"
            />
        </div>
        <div
            className="col-lg-10"
        >
            <dl
                className="dl-horizontal"
            >
                <dt>
                    Nombre
                </dt>
                <dd>
                    Viviana Perez
                </dd>
                <dt>
                    Correo Electrónico
                </dt>
                <dd>
                    @thoughtworks.com
                </dd>
                <dt>
                    Oficina base
                </dt>
                <dd>
                    Quito
                </dd>
                <dt>
                    Oficina actual
                </dt>
                <dd>
                    Pune
                </dd>
                <dt>
                    Fecha de contratación
                </dt>
                <dd>
                    2013-08-05
                </dd>
                <dt>
                    Días disponibles
                </dt>
                <dd />
            </dl>
        </div>
    </div>
</div>,
  "nodes": Array [
    <div>
      <h3
            className="home-personal-information"
      >
            Tu Información
      </h3>
      <div
            className="row"
      >
            <div
                  className="col-lg-2"
            >
                  <img
                        alt="foto personal"
                        src="https://jigsaw.thoughtworks.net/consultants/22118/show_picture?style=profile"
                  />
            </div>
            <div
                  className="col-lg-10"
            >
                  <dl
                        className="dl-horizontal"
                  >
                        <dt>
                              Nombre
                        </dt>
                        <dd>
                              Viviana Perez
                        </dd>
                        <dt>
                              Correo Electrónico
                        </dt>
                        <dd>
                              @thoughtworks.com
                        </dd>
                        <dt>
                              Oficina base
                        </dt>
                        <dd>
                              Quito
                        </dd>
                        <dt>
                              Oficina actual
                        </dt>
                        <dd>
                              Pune
                        </dd>
                        <dt>
                              Fecha de contratación
                        </dt>
                        <dd>
                              2013-08-05
                        </dd>
                        <dt>
                              Días disponibles
                        </dt>
                        <dd />
                  </dl>
            </div>
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <PersonalInformation
        error={false}
        person={
                Object {
                        "employeeId": "15576",
                        "hireDate": "2013-08-05",
                        "homeOffice": Object {
                          "name": "Quito",
                        },
                        "picture": Object {
                          "url": "https://jigsaw.thoughtworks.net/consultants/22118/show_picture?style=profile",
                        },
                        "preferredName": "Viviana Perez",
                        "workingOffice": Object {
                          "name": "Pune",
                        },
                      }
        }
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "error": false,
          "person": Object {
            "employeeId": "15576",
            "hireDate": "2013-08-05",
            "homeOffice": Object {
              "name": "Quito",
            },
            "picture": Object {
              "url": "https://jigsaw.thoughtworks.net/consultants/22118/show_picture?style=profile",
            },
            "preferredName": "Viviana Perez",
            "workingOffice": Object {
              "name": "Pune",
            },
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
          <h3
                    className="home-personal-information"
          >
                    Tu Información
          </h3>
          <div
                    className="row"
          >
                    <div
                              className="col-lg-2"
                    >
                              <img
                                        alt="foto personal"
                                        src="https://jigsaw.thoughtworks.net/consultants/22118/show_picture?style=profile"
                              />
                    </div>
                    <div
                              className="col-lg-10"
                    >
                              <dl
                                        className="dl-horizontal"
                              >
                                        <dt>
                                                  Nombre
                                        </dt>
                                        <dd>
                                                  Viviana Perez
                                        </dd>
                                        <dt>
                                                  Correo Electrónico
                                        </dt>
                                        <dd>
                                                  @thoughtworks.com
                                        </dd>
                                        <dt>
                                                  Oficina base
                                        </dt>
                                        <dd>
                                                  Quito
                                        </dd>
                                        <dt>
                                                  Oficina actual
                                        </dt>
                                        <dd>
                                                  Pune
                                        </dd>
                                        <dt>
                                                  Fecha de contratación
                                        </dt>
                                        <dd>
                                                  2013-08-05
                                        </dd>
                                        <dt>
                                                  Días disponibles
                                        </dt>
                                        <dd />
                              </dl>
                    </div>
          </div>
</div>,
        "_debugID": 2,
        "_renderedOutput": <div>
          <h3
                    className="home-personal-information"
          >
                    Tu Información
          </h3>
          <div
                    className="row"
          >
                    <div
                              className="col-lg-2"
                    >
                              <img
                                        alt="foto personal"
                                        src="https://jigsaw.thoughtworks.net/consultants/22118/show_picture?style=profile"
                              />
                    </div>
                    <div
                              className="col-lg-10"
                    >
                              <dl
                                        className="dl-horizontal"
                              >
                                        <dt>
                                                  Nombre
                                        </dt>
                                        <dd>
                                                  Viviana Perez
                                        </dd>
                                        <dt>
                                                  Correo Electrónico
                                        </dt>
                                        <dd>
                                                  @thoughtworks.com
                                        </dd>
                                        <dt>
                                                  Oficina base
                                        </dt>
                                        <dd>
                                                  Quito
                                        </dd>
                                        <dt>
                                                  Oficina actual
                                        </dt>
                                        <dd>
                                                  Pune
                                        </dd>
                                        <dt>
                                                  Fecha de contratación
                                        </dt>
                                        <dd>
                                                  2013-08-05
                                        </dd>
                                        <dt>
                                                  Días disponibles
                                        </dt>
                                        <dd />
                              </dl>
                    </div>
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <PersonalInformation
    error={false}
    person={
        Object {
            "employeeId": "15576",
            "hireDate": "2013-08-05",
            "homeOffice": Object {
              "name": "Quito",
            },
            "picture": Object {
              "url": "https://jigsaw.thoughtworks.net/consultants/22118/show_picture?style=profile",
            },
            "preferredName": "Viviana Perez",
            "workingOffice": Object {
              "name": "Pune",
            },
          }
    }
/>,
}
`;
